force-app/main/default/objects/Event_Invitee__c/Event_Invitee__c.object-meta.xml
<CustomObject>
    <label>Event Invitee</label>
    <pluralLabel>Event Invitees</pluralLabel>
    <nameField>
        <label>Invitee Number</label>
        <type>AutoNumber</type>
        <displayFormat>INV-{00000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>