force-app/main/default/objects/Event_Invitee__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <label>Account Owner (snapshot)</label>
    <description>Snapshot of Contact.Account.OwnerId taken at submit time so an ownership change mid-approval does not reroute pending items.</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Invitees To Approve</relationshipLabel>
    <relationshipName>Invitees_To_Approve</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>