force-app/main/default/objects/Event_Invitee__c/fields/Added_By__c.field-meta.xml
<CustomField>
    <fullName>Added_By__c</fullName>
    <label>Added By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Invitees Added</relationshipLabel>
    <relationshipName>Invitees_Added</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>