force-app/main/default/objects/Event_Invitee__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <label>Approver</label>
    <description>Who must sign this invitee off. Resolved once at submit time and frozen: Account Owner for a Contact invitee; Lead Owner for a Lead invitee unless the submitter owns that Lead; otherwise the submitter&apos;s manager. This is the Approval Process&apos;s Related User Field — an Approval Process can only route to a stored User lookup, which is why this is not a formula.</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Invitees To Approve</relationshipLabel>
    <relationshipName>Invitees_Awaiting_My_Approval</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>