force-app/main/default/objects/Event_Invitee__c/fields/Decision_Comment__c.field-meta.xml
<CustomField>
    <fullName>Decision_Comment__c</fullName>
    <label>Decision Comment</label>
    <type>Text</type>
    <length>255</length>
    <description>Free-text comment entered by the approver in the corporate approval system, carried back on the decision callback.</description>
</CustomField>