force-app/main/default/objects/Event_Invitee__c/fields/Event_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Event_Attendee__c</fullName>
    <label>Event Attendee</label>
    <description>Who is invited. R5 replaced the Contact__c / Lead__c pair with this single lookup: every invitee is an Event_Attendee__c, so the junction has one head instead of two and no consumer has to ask which one is populated. Required at the field level rather than by a validation rule — an invitee pointing at nobody has a blank name in every report and approval screen it reaches, and this object has no records anywhere, so there is no reason to enforce it the softer way. Restrict, not SetNull — an attendee who has been invited to something cannot be deleted out from under an approval, and unlike the old Contact and Lead lookups this constraint only ever blocks deletion of a record this project owns.</description>
    <type>Lookup</type>
    <referenceTo>Event_Attendee__c</referenceTo>
    <relationshipLabel>Event Invitees</relationshipLabel>
    <relationshipName>Event_Invitees</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>