force-app/main/default/objects/Event_Invitee__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <description>★R6 Reads up to the parent event&apos;s Event_Type__c. Note what has no counterpart here: Topic__c is a multi-select picklist and a formula cannot render one as text, only test it with INCLUDES(). So the attendee-side related list and report show the event&apos;s shape but not its subject; filtering by subject has to go through the Marketing Event report type, whose base object is the event itself. That asymmetry is a cost of the multi-select, recorded rather than worked around.</description>
    <type>Text</type>
    <formula>TEXT(Marketing_Event__r.Event_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
</CustomField>