force-app/main/default/objects/Event_Invitee__c/fields/External_Approval_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Approval_Id__c</fullName>
    <label>External Approval ID</label>
    <type>Text</type>
    <length>36</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>Correlation ID of the approval request in the corporate (on-prem) approval system. Generated at submit time when external approval is enabled; cleared when a rejected invitee is re-added. The decision callback addresses rows by this value.</description>
</CustomField>