force-app/main/default/objects/Event_Invitee__c/fields/External_Approver__c.field-meta.xml
<CustomField>
    <fullName>External_Approver__c</fullName>
    <label>External Approver</label>
    <type>Text</type>
    <length>128</length>
    <description>Who actually decided in the corporate approval system (employee ID / directory account). May differ from Account_Owner__c — corporate systems allow delegation and escalation.</description>
</CustomField>