force-app/main/default/objects/Event_Invitee__c/fields/Invitee_Email__c.field-meta.xml
<CustomField>
    <fullName>Invitee_Email__c</fullName>
    <label>Invitee Email</label>
    <description>Reads through the attendee. Blank where the uploaded row carried no address, which is a real and common state on a conference list — the export shows an empty cell rather than inventing one.</description>
    <type>Text</type>
    <formula>Event_Attendee__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
</CustomField>