force-app/main/default/objects/Event_Invitee__c/fields/Invitee_Name__c.field-meta.xml
<CustomField>
    <fullName>Invitee_Name__c</fullName>
    <label>Invitee Name</label>
    <description>Reads through the attendee. These four formulas existed in R3 to hide a two-headed junction from every consumer; in R5 there is only one head, so they are now a plain convenience — the reports and the approval page keep working unchanged, which is the point of keeping them rather than repointing a dozen consumers at Event_Attendee__r.</description>
    <type>Text</type>
    <formula>Event_Attendee__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
</CustomField>