force-app/main/default/objects/Event_Invitee__c/fields/Invitee_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Invitee_Salutation__c</fullName>
    <label>Invitee Salutation</label>
    <description>★R8 SEIM_INVITEE.SALUTE. Snapshot of the attendee&apos;s Salutation__c at the moment they were added, for the same reason as Invitee_Title__c: a name badge and a printed guest list are produced from the invitation, and reprinting one a year later should give the same words it gave the first time.</description>
    <type>Text</type>
    <length>40</length>
</CustomField>