force-app/main/default/objects/Event_Invitee__c/fields/Invitee_Title__c.field-meta.xml
<CustomField>
    <fullName>Invitee_Title__c</fullName>
    <label>Invitee Title</label>
    <description>Reads correctly whether the invitee is a Contact or a Lead, so no consumer has to branch. The Screen 5 reports depend on these: a report cannot pick between two lookup paths by itself.</description>
    <type>Text</type>
    <formula>BLANKVALUE(Contact__r.Title, Lead__r.Title)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
</CustomField>