force-app/main/default/objects/Event_Invitee__c/fields/Invitee_Type__c.field-meta.xml
<CustomField>
    <fullName>Invitee_Type__c</fullName>
    <label>Invitee Type</label>
    <description>Reads correctly whether the invitee is a Contact or a Lead, so no consumer has to branch. The Screen 5 reports depend on these: a report cannot pick between two lookup paths by itself.</description>
    <type>Text</type>
    <formula>IF(ISBLANK(Contact__c), &quot;Lead&quot;, &quot;Contact&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
</CustomField>