force-app/main/default/objects/Event_Invitee__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <description>Set instead of Contact for an invitee with no customer relationship — a professor, researcher, speaker or press contact. Account is a transacting customer by definition, so these people cannot be Contacts. Exactly one of Contact__c / Lead__c is populated; the Invitee_Is_Contact_Xor_Lead validation rule enforces it.</description>
    <type>Lookup</type>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Event Invitees</relationshipLabel>
    <relationshipName>Event_Invitees</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>