force-app/main/default/objects/Event_Invitee__c/fields/Marketing_Event__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Event__c</fullName>
    <label>Marketing Event</label>
    <type>MasterDetail</type>
    <referenceTo>Marketing_Event__c</referenceTo>
    <relationshipLabel>Event Invitees</relationshipLabel>
    <relationshipName>Event_Invitees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>