force-app/main/default/objects/Event_Invitee__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <label>Unique Key</label>
    <description>EventId + AttendeeId. Prevents duplicate invitees per event; used as upsert key when re-adding a rejected invitee. R5 closes the gap this field used to carry: one person could previously be invited twice to one event, once as a Contact and once as a Lead, because those were two different keys. With a single kind of invitee there is one key per person per event, so Open Question 9 is settled rather than merely noted.</description>
    <type>Text</type>
    <length>40</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>