force-app/main/default/objects/Event_Invitee__c/validationRules/Approver_Required_When_Pending.validationRule-meta.xml
<ValidationRule>
    <fullName>Approver_Required_When_Pending</fullName>
    <active>true</active>
    <description>A pending row with no approver is invisible to everyone and can never be decided — it just sits there looking submitted. This rule matters more in R5, not less: with the ladder down to a single rung, a submitter whose user record has no Manager has nothing to fall back on at all, so what used to be an edge case is now the only way the resolution can fail. Refusing the state is what keeps the submit honest.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Pending Approval&quot;), ISBLANK(Approver__c))</errorConditionFormula>
    <errorMessage>This invitee cannot be submitted: no approver could be determined. Set a Manager on the submitting user.</errorMessage>
</ValidationRule>