force-app/main/default/objects/Event_Invitee__c/validationRules/Invitee_Is_Contact_Xor_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>Invitee_Is_Contact_Xor_Lead</fullName>
    <active>true</active>
    <description>Exactly one head of the junction. Both blank means an invitee pointing at nobody; both set means two identities for one row, and the formula fields would silently prefer the Contact. Equality of the two ISBLANKs is true in precisely those two cases.</description>
    <errorConditionFormula>ISBLANK(Contact__c) = ISBLANK(Lead__c)</errorConditionFormula>
    <errorMessage>An invitee must be either a Contact or a Lead — not both, and not neither.</errorMessage>
</ValidationRule>